#122: Read java version from <release> compiler option (#123)